static/results/85409340-636d-4118-abd8-ae4b9c525800/85409340-636d-4118-abd8-ae4b9c525800_log.txt
  File "/app/analyzer.py", line 30
    if __name__ == \"__main__\":
                    ^
SyntaxError: unexpected character after line continuation character
